# xushi

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.en.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  release.yml
docs/: CODE_OPTIMIZATION_REVIEW.md  PROJECT_REQUIREMENTS.md  TECHNICAL_DESIGN.md
docs/guide/: installation.md
docs/superpowers/plans/: 2026-05-14-reminder-aggregation.md
packaging/: xushi_cli_entry.py  xushi_daemon_entry.py
plugins/openclaw-xushi/: README.md  openclaw.plugin.json  package.json
plugins/openclaw-xushi/src/: index.ts
scripts/: __init__.py  build_binaries.py  check_project_metadata.py  install.ps1  install.sh  prepare_release_assets.py
skills/xushi-skills/: SKILL.md
skills/xushi-skills/agents/: openai.yaml
skills/xushi-skills/references/: clarification-questions.md  optimization-notes.md  schema-patterns.md  task-types.md
src/xushi/: __init__.py  api.py  bridges.py  calendar.py  capabilities.py  cli.py  config.py  daemon.py  delivery.py  executors.py  lifecycle.py  metrics.py  models.py  notifications.py  plugins.py  runtime.py  scheduler.py  service.py  skills.py  storage.py  timezone.py  upgrade.py
tests/: test_api.py  test_bridges.py  test_calendar.py  test_cli.py  test_config.py  test_daemon.py  test_executors.py  test_models.py  test_notifications.py  test_packaging.py  test_project_metadata.py  test_scheduler.py  test_service.py  test_storage.py  test_upgrade.py
(+9 files in other folders)
